--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,12 @@
     
 
 }
-
+/*jumbotron2*/
 #jumbotron2{
     min-height: 546px;
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
     background-size: cover;
     position: relative;
-
 }
 .jumbotron-card2{
     color: white;
@@ -76,4 +75,36 @@
 .section-6 img{
     height: 10;
     border:2px solid #212529;
+}
+.section-7 img{
+    height: 100%;
+}
+
+/*section 8*/
+.section-8{
+    background-color: #bebcbb;
+}
+.section-8 a{
+    background-color: #d9dadc;
+    color: #4071e5;
+
+}
+.section-8 .card{
+    background-color: #bebcbb;
+}
+
+/*section 9*/
+.section-9 img{
+    height: 100%;
+}
+
+/*section 10*/
+.section-10{
+    background-color: #161c3b;
+}
+
+.section-10 .card{
+    background-color: #161c3b;
+    color: white;
+
 }
