--- a/css/style.css
+++ b/css/style.css
@@ -43,17 +43,52 @@
     padding: 2px; 
     border: 2px solid white;
 }
-.container-img img:hover{
-    border: 2px solid blue;
-    padding: 2px;
+.container-img{
+    animation-name: img-up;
+    position: relative;
+  
 }
+.img-opacity{
+    opacity: 0.5;
+}
+.img-opacity:hover{
+    opacity: 1.0;
+   
+}
+
+
+.container-img img:hover{
+    
+    border: 2px solid blue ;
+    transform: translateY(-10px);
+    transition: transform 250ms;
+    animation-duration: 3s;
+    box-shadow:  5px 10px 18px #888888;
+    ;
+}
+
+
+
+
 .container-gadget{
     
     border-bottom: 2px solid white;
+    
+
 }
 .container-gadget:hover{
     border-bottom: 2px solid blue;
-    opacity: 0.5;
+    
+   
+
+    
+
+}
+
+/*section 3*/
+.section-3 a:hover{
+    border: 1px solid #4071e5;
+    
     
 
 }
@@ -85,6 +120,10 @@
 .section-7 img{
     height: 100%;
 }
+/*section 6*/
+.img-scale:hover{
+    transform: scale(1.0);
+}
 
 /*section 8*/
 .section-8{
@@ -112,8 +151,17 @@
 .section-10 .card{
     background-color: #161c3b;
     color: white;
+}
+/*section 11*/
+.section-11 img{
+    height: 100%;
+    width: 100%;
+}
+.section-11 .box-shadow{
+    box-shadow:  5px 10px 18px #888888;
 
 }
+
 
 
 /*footer*/
@@ -127,7 +175,7 @@ footer .card{
 }
 .footer-ul{
     display: flex;
-    justify-content: space-evenly;
+    
     
 }
 .footer-ul ul{
@@ -137,3 +185,15 @@ footer .card{
 
 
 /**/
+@media screen and (max-width:576px) {
+    .img-footer{
+        display: none;
+        
+        
+    }
+
+    .section-9 img{
+        padding-bottom: 25px;
+    }
+   
+}
